--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a music training telegram bot",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,8 +26,5 @@
   },
   "engines": {
     "node": "8.11.4"
-  },
-  "scripts":{
-    "start": "node main.js"
   }
 }
