--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Antoine-marchais/DootBot#readme",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "express": "^4.16.3",
     "request": "^2.88.0"
   },
