--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-queue": "0.0.12",
     "request": "^2.88.0"
   }
 }
