--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "express-queue": "0.0.12",
+    "express-rate-limit": "^3.1.1",
     "request": "^2.88.0"
   }
 }
