add persistence of variables

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "request": "^2.88.0",
-    "telegrambot": "file:localModules/telegramBot"
+    "telegrambot": "file:localModules/telegramBot",
+    "json-preferences": "file:localModules/telegramBot"
   },
   "devDependencies": {},
   "scripts": {
