--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "request": "^2.88.0",
-    "telegrambot": "file:localModules/telegramBot",
-    "json-preferences": "file:localModules/json-preferences"
+    "telegrambot": "file:./localModules/telegramBot",
+    "json-preferences": "file:./localModules/json-preferences"
   },
   "devDependencies": {},
   "scripts": {
