--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "a dooting bot",
   "main": "main.js",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "json-preferences": "file:./localModules/json-preferences",
     "request": "^2.88.0",
-    "telegrambot": "file:./localModules/telegramBot",
-    "json-preferences": "file:./localModules/json-preferences"
+    "telegrambot": "file:./localModules/telegramBot"
   },
   "devDependencies": {},
   "scripts": {
