--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "main.js",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "express": "^4.17.2",
     "pg": "^7.5.0",
     "request": "^2.88.0",
     "telegrambot": "file:./localModules/telegramBot"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
