--- a/.github/workflows/deploy-to-gcp.yml
+++ b/.github/workflows/deploy-to-gcp.yml
@@ -19,7 +19,13 @@ jobs:
         run: | 
           gcloud auth activate-service-account --key-file=key_file.json
           gcloud config set project $GCP_PROJECT
-          gcloud functions deploy $BOT_NAME --entry-point=processMessage --runtime=nodejs14 --trigger-http --allow-unauthenticated --set-env-vars=TOKEN=${{ secrets.BOT_TOKEN }}
+          gcloud functions deploy $BOT_NAME \
+            --entry-point=processMessage \
+            --runtime=nodejs14 \
+            --trigger-http \
+            --allow-unauthenticated \
+            --set-env-vars=TOKEN=${{ secrets.BOT_TOKEN }} \
+            --region=europe-west1
           gcloud functions describe $BOT_NAME --format="get(httpsTrigger.url)" > function_endpoint.txt
       - name: set hook with function endpoint 
         run: |
