--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a dooting bot",
   "main": "main.js",
   "dependencies": {
+    "@google-cloud/firestore": "^5.0.1",
     "body-parser": "^1.19.1",
     "dotenv": "^6.0.0",
     "express": "^4.17.2",
